<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Platinum</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="album">album</string>
    <string name="artist">artist</string>
    <string name="hint_card_number">ENTER CARD #</string>
    <string name="hint_cus_email">CUSTOMERS@EMAIL</string>
    <string name="hint_cus_name">CUSTOMER NAME</string>
    <string name="hint_total_beer">NUMBER OF BEERS</string>
    <string name="hint_password">ENTER PASSWORD</string>
    <string name="switch_male">MALE</string>
    <string name="switch_female">FEMALE</string>
    <string name="switch_vina">VINA</string>
    <string name="switch_expat">EXPAT</string>
    <string name="rad_minus_35">-35</string>
    <string name="rad_50_plus">50+</string>
    <string name="btn_start_flying">START FLYING</string>
    <string name="btn_down_the_hatch">DOWN THE HATCH</string>
    <string name="btn_login_now">LOGIN NOW</string>
    <string name="btn_logout_now">LOGOUT</string>
    <string name="btn_venue_report">VENUE REPORT</string>
    <string name="title_activity_loading">LoadingActivity</string>

</resources>
